# WindStream

./: .gitmodules  CMakeLists.txt  README.md
Test/: CMakeLists.txt  Test.c
WindStream/: CMakeLists.txt  Test.c  WindStream.c  WindStream.h  definitions.h  helpers.c  helpers.h  mainTest.c
WindStream/APIHandler/: apihandler.c  apihandler.h  openal_apihandler.c  openal_apihandler.h
WindStream/AudioHandler/: audiohandler.c  audiohandler.h
WindStream/FileHandler/: filehandler.c  filehandler.h  wav_filehandler.c  wav_filehandler.h  wav_filestructure.h  wave_filehandler.c  wave_filehandler.h
WindStream/ThreadHandler/: iso11_threadhandler.cpp  iso11_threadhandler.h  threadhandler.h  win32_threadhandler.c  win32_threadhandler.h
lib/Win_x64/: getopt_static.lib  grabbag_static.lib  libFLAC_dynamic.exp  libFLAC_dynamic.lib  libogg_static.lib  libvorbis.exp  libvorbis.lib  libvorbisfile.exp  libvorbisfile.lib  replaygain_analysis_static.lib  replaygain_synthesis_static.lib  utf8_static.lib  win_utf8_io_static.lib
